{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 138,
  "lineage": "a4f223ea-f5f7-31fe-4628-343032a68ccf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06eecef118bbf9259",
            "arn": "arn:aws:ec2:us-east-1:997599226815:instance/i-0a857bfe9d0d01e2c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globoweb-dev-19281_instance_profile",
            "id": "i-0a857bfe9d0d01e2c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a5a1911615e72742",
            "private_dns": "ip-10-0-0-250.ec2.internal",
            "private_ip": "10.0.0.250",
            "public_dns": "ec2-54-242-122-221.compute-1.amazonaws.com",
            "public_ip": "54.242.122.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04fd6fd1f7a645dac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03cd2fe58668ed97a",
            "tags": {
              "Name": "globoweb-dev-nginx-0",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "globoweb-dev-nginx-0",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c9fc2672d4a2dfdf"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.allow_instance_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06eecef118bbf9259",
            "arn": "arn:aws:ec2:us-east-1:997599226815:instance/i-04d2f0bedb607ea0e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globoweb-dev-19281_instance_profile",
            "id": "i-04d2f0bedb607ea0e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e0fb3ed3a1d4cd2c",
            "private_dns": "ip-10-0-1-239.ec2.internal",
            "private_ip": "10.0.1.239",
            "public_dns": "ec2-3-84-96-70.compute-1.amazonaws.com",
            "public_ip": "3.84.96.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e8b01ae0ae0ec36",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ced1b346400daad2",
            "tags": {
              "Name": "globoweb-dev-nginx-1",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "globoweb-dev-nginx-1",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c9fc2672d4a2dfdf"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.allow_instance_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "globoweb-dev-19281",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:997599226815:loadbalancer/app/globoweb-dev-alb/8cae53a033fe8001",
            "arn_suffix": "app/globoweb-dev-alb/8cae53a033fe8001",
            "desync_mitigation_mode": "defensive",
            "dns_name": "globoweb-dev-alb-843754180.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:997599226815:loadbalancer/app/globoweb-dev-alb/8cae53a033fe8001",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globoweb-dev-alb",
            "security_groups": [
              "sg-0dbe5d1121bdee240"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03cd2fe58668ed97a"
              },
              {
                "subnet_id": "subnet-0ced1b346400daad2"
              }
            ],
            "subnets": [
              "subnet-03cd2fe58668ed97a",
              "subnet-0ced1b346400daad2"
            ],
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-08998710fc3b58b8b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:997599226815:listener/app/globoweb-dev-alb/8cae53a033fe8001/6addb07cd884b18a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:997599226815:targetgroup/globoweb-dev-alb-tg/541816aa565a52c6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:997599226815:listener/app/globoweb-dev-alb/8cae53a033fe8001/6addb07cd884b18a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:997599226815:loadbalancer/app/globoweb-dev-alb/8cae53a033fe8001",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:997599226815:targetgroup/globoweb-dev-alb-tg/541816aa565a52c6",
            "arn_suffix": "targetgroup/globoweb-dev-alb-tg/541816aa565a52c6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:997599226815:targetgroup/globoweb-dev-alb-tg/541816aa565a52c6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "globoweb-dev-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08998710fc3b58b8b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:997599226815:targetgroup/globoweb-dev-alb-tg/541816aa565a52c6-20220611101657865300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:997599226815:targetgroup/globoweb-dev-alb-tg/541816aa565a52c6",
            "target_id": "i-0a857bfe9d0d01e2c"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.allow_instance_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:997599226815:targetgroup/globoweb-dev-alb-tg/541816aa565a52c6-20220611101657553300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:997599226815:targetgroup/globoweb-dev-alb-tg/541816aa565a52c6",
            "target_id": "i-04d2f0bedb607ea0e"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.allow_instance_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997599226815:security-group/sg-0dbe5d1121bdee240",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbe5d1121bdee240",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "globoweb-dev-nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "997599226815",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-08998710fc3b58b8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997599226815:security-group/sg-0c9fc2672d4a2dfdf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9fc2672d4a2dfdf",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "globoweb-dev-nginx_sg",
            "name_prefix": "",
            "owner_id": "997599226815",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-08998710fc3b58b8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997599226815:internet-gateway/igw-03db574767fecfae6",
            "id": "igw-03db574767fecfae6",
            "owner_id": "997599226815",
            "tags": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-08998710fc3b58b8b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03db574767fecfae6",
            "id": "r-rtb-0a8ea67f7cdb832951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a8ea67f7cdb83295",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997599226815:route-table/rtb-0a8ea67f7cdb83295",
            "id": "rtb-0a8ea67f7cdb83295",
            "owner_id": "997599226815",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-08998710fc3b58b8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f102987ebd4e2729",
            "route_table_id": "rtb-0a8ea67f7cdb83295",
            "subnet_id": "subnet-03cd2fe58668ed97a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090e4118162def637",
            "route_table_id": "rtb-0a8ea67f7cdb83295",
            "subnet_id": "subnet-0ced1b346400daad2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997599226815:subnet/subnet-03cd2fe58668ed97a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cd2fe58668ed97a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "997599226815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-08998710fc3b58b8b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997599226815:subnet/subnet-0ced1b346400daad2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ced1b346400daad2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "997599226815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-08998710fc3b58b8b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997599226815:vpc/vpc-08998710fc3b58b8b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dea26f2b676af9ed",
            "default_route_table_id": "rtb-09a754879d26dd655",
            "default_security_group_id": "sg-0b684db9b4f5db588",
            "dhcp_options_id": "dopt-0a0ca573fbac16fb3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08998710fc3b58b8b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a754879d26dd655",
            "owner_id": "997599226815",
            "tags": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "globoweb-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            }
          }
        }
      ]
    }
  ]
}